objects/Package__c.object
<CustomObject>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Id__c</fullName>
        <externalId>true</externalId>
        <label>Package Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>